@@ -43,7 +43,9 @@ namespace Mono.Cecil.Mdb {
 
 		public ISymbolWriter CreateWriter (ModuleDefinition module, string assembly)
 		{
-			return new MdbWriter (new MonoSymbolWriter (assembly), module.Mvid);
+			SymbolWriterImpl writer = new SymbolWriterImpl (module.Mvid);
+			writer.Initialize (IntPtr.Zero, assembly, true);
+			return new MdbWriter (writer);
 		}
 	}
 }
