@@ -1,3 +1,7 @@
+2007-02-21  Jb Evain  <jb@nurv.fr>
+
+	* Start working on local var debug infos emitting.
+
 2006-09-24  Jb Evain  <jbevain@gmail.com>
 
 	* start some work on the reader.
